--- a/index.html
+++ b/index.html
@@ -1,10 +1,173 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+
+    <link rel="stylesheet" href="fonts/fonts.css"/>
+    <link rel="stylesheet" href="styles/global.css"/>
+    <link rel="stylesheet" href="styles/style.css"/>
+</head>
+<body></body>
+
+<header>
+    <div class="header">
+        <nav class="header-menu">
+            <ul class="header-menu-list">
+                <li class="header-menu-list-item-active">
+                    <a class="base-link">главная</a>
+                </li>
+                <li class="header-menu-list-item">
+                    <a class="base-link" href="#">посмотреть лоты</a>
+                </li>
+                <li class="header-menu-list-item">
+                    <a class="base-link" href="#">об аукционе</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="header-logo">
+            <img class="header-logo-image" src="images/logo-black.svg" alt="оно тебе надо в рамке">
+        </div>
+
+        <div class="header-contacts">
+            <div>
+                <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <a class="address">наб. Принсенграхт 263-265,<br/>
+                    Амстердам <br/>
+                </a>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div class="cover">
+    <div class="overlay"></div>
+
+    <div class="cover-section">
+        <h1 class="cover-title">
+            <span class="accent-span">о<span class="accent-span-long">н</span>о</span>
+            <span class="accent-span text-center">те<span class="accent-span-long">б</span>е</span>
+            <span class="accent-span text-right"><span class="accent-span-long">н</span>адо</span>
+        </h1>
+    </div>
+
+    <div class="cover-description">
+        <div class="cover-description-text">
+            АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ
+        </div>
+
+        <button class="bet-button">
+            СДЕЛАТЬ СТАВКУ
+        </button>
+    </div>
+</div>
+
+<div class="lots">
+    <div class="lots-heading">
+        ЛОТЫ
+    </div>
+
+    <ul class="lots-card-list">
+        <li class="lots-card-list-left">
+            <div class="overlay"></div>
+            <a href="#"> Фильм режиссёра, который бросил киношколу</a>
+            <article>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что
+                режиссёр — Пол Томас Андерсон?
+            </article>
+        </li>
+
+        <li class="lots-card-list-center">
+            <div class="overlay"></div>
+            <a href="#">Книга, где описан один скучный день из жизни рекламного агента</a>
+            <article>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский. В
+                ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных
+                времён.
+                И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+            </article>
+        </li>
+
+        <li class="lots-card-list-right">
+            <div class="overlay"></div>
+            <a href="#">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+            <article>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку.
+                Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
+                революционных работ Кандинского?
+            </article>
+    </ul>
+    <div class="lots-look-more-link">
+        <a href="#">посмотреть больше</a>
+    </div>
+</div>
+
+<div style="height: 172px"></div>
+
+<div class="about">
+    <div class="about-left">
+        <div>
+            <div class="about-left-image"></div>
+        </div>
+    </div>
+    <div class="about-right">
+        <div class="about-title">ОБ АУКЦИОНЕ</div>
+        <div class="about-text">
+            <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
+                должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина,
+                которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p> Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные
+                критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику,
+                кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
+                Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
+    </div>
+</div>
+
+<div style="height: 172px"></div>
+
+<footer class="footer">
+    <div class="footer-contacts">
+        <div>
+            <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <a class="address">наб. Принсенграхт 263-265,<br/>
+                Амстердам <br/>
+            </a>
+        </div>
+    </div>
+
+    <nav class="footer-menu">
+        <ul class="footer-menu-list">
+            <li class="footer-menu-list-item-active">
+                <a class="base-link">главная</a>
+            </li>
+            <li class="footer-menu-list-item">
+                <a class="base-link" href="#">посмотреть лоты</a>
+            </li>
+            <li class="footer-menu-list-item">
+                <a class="base-link" href="#">об аукционе</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="footer-social-list">
+        <a href="#">
+            <div class="footer-icon footer-social-icon-yt">
+            </div>
+        </a>
+        <a href="#">
+            <div class="footer-icon footer-social-icon-vk">
+            </div>
+        </a>
+        <a href="#">
+            <div class="footer-icon footer-social-icon-p">
+            </div>
+        </a>
+    </div>
+</footer>
 </html>
