--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <header>
     <div class="header">
         <nav class="header-menu">
-            <ul class="header-menu-list">
-                <li class="header-menu-list-item-active">
-                    <a class="base-link">главная</a>
+            <ul class="header-links-list">
+                <li class="header-links-list-item-active">
+                    <a class="header-link header-links-list-item-no-bullit">главная</a>
                 </li>
-                <li class="header-menu-list-item">
-                    <a class="base-link" href="#">посмотреть лоты</a>
+                <li class="header-links-list-item">
+                    <a class="header-link header-link-active" href="#">посмотреть лоты</a>
                 </li>
-                <li class="header-menu-list-item">
-                    <a class="base-link" href="#">об аукционе</a>
+                <li class="header-links-list-item">
+                    <a class="header-link header-link-active" href="#">об аукционе</a>
                 </li>
             </ul>
         </nav>
@@ -32,11 +32,11 @@
             <img class="header-logo-image" src="images/logo-black.svg" alt="оно тебе надо в рамке">
         </div>
 
-        <div class="header-contacts">
-            <div>
+        <div class="address">
+            <div class="header-address">
                 <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-                <a class="address">наб. Принсенграхт 263-265,<br/>
+                <a class="contacts">наб. Принсенграхт 263-265,<br/>
                     Амстердам <br/>
                 </a>
             </div>
