--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img class="header-logo-image" src="images/logo-black.svg" alt="оно тебе надо в рамке">
         </div>
 
-        <div class="address">
+        <div class="address-top">
             <div class="header-address">
                 <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -131,11 +131,11 @@
 <div style="height: 172px"></div>
 
 <footer class="footer">
-    <div class="footer-contacts">
+    <div class="address-bottom">
         <div>
             <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-            <a class="address">наб. Принсенграхт 263-265,<br/>
+            <a class="contacts">наб. Принсенграхт 263-265,<br/>
                 Амстердам <br/>
             </a>
         </div>
@@ -144,13 +144,13 @@
     <nav class="footer-menu">
         <ul class="footer-menu-list">
             <li class="footer-menu-list-item-active">
-                <a class="base-link">главная</a>
+                <a class="footer-menu-link">главная</a>
             </li>
             <li class="footer-menu-list-item">
-                <a class="base-link" href="#">посмотреть лоты</a>
+                <a class="footer-menu-link" href="#">посмотреть лоты</a>
             </li>
             <li class="footer-menu-list-item">
-                <a class="base-link" href="#">об аукционе</a>
+                <a class="footer-menu-link" href="#">об аукционе</a>
             </li>
         </ul>
     </nav>
